fix: update classic v1 theme

--- a/packages/core/scss/theme/classic-light/_color.scss
+++ b/packages/core/scss/theme/classic-light/_color.scss
@@ -26,6 +26,7 @@
       --theme-color-component-7: #32a0a040;
       --theme-color-component-7--active: #216b6b52;
       --theme-color-component-error: #fff1f5;
+      --theme-color-component-info: #e3ecfd;
       --theme-color-component-8: #d6dfe7;
       --theme-color-ghost--selected: #32a0a040;
       --theme-color-ghost--selected-hover: #10707040;
@@ -341,11 +342,14 @@
       --theme-nav-item-secondary-icon--color--disabled: var(--theme-color-weak-text);
       --theme-avatar--background: var(--theme-color-component-3);
       --theme-input--border-color: var(--theme-color-std-bdr);
+      --theme-input--border-color--autofill: var(--theme-color-std-bdr);
       --theme-input--background: var(--theme-color-1);
+      --theme-input--background--autofill: var(--theme-color-component-info);
       --theme-input--border-color-bottom--readonly: var(--theme-color-soft-bdr);
       --theme-input-error--background: var(--theme-color-component-error);
       --theme-input--color--disabled: var(--theme-color-weak-text);
       --theme-input--color: var(--theme-color-std-text);
+      --theme-input--color--autofill: var(--theme-color-std-text);
       --theme-input--background--hover: var(--theme-color-1);
       --theme-input--border-color--hover: var(--theme-color-std-bdr);
       --theme-input--background--focus: var(--theme-color-1);
@@ -533,15 +537,15 @@
       --theme-input-select-icon--color--active: var(--theme-color-std-text);
       --theme-switch-off--background--hover: var(--theme-color-component-4);
       --theme-switch-off--background--active: var(--theme-color-component-3);
-      --theme-switch-off--background--disabled: var(--theme-color-component-3);
+      --theme-switch-off--background--disabled: var(--theme-color-component-2);
       --theme-switch-on--background: var(--theme-color-dynamic);
       --theme-switch-on--background--hover: var(--theme-color-dynamic--hover);
       --theme-switch-on--background--active: var(--theme-color-dynamic--active);
-      --theme-switch-on--background--disabled: var(--theme-color-component-3);
+      --theme-switch-on--background--disabled: var(--theme-color-component-2);
       --theme-switch-mixed--background: var(--theme-color-component-3);
       --theme-switch-mixed--background--hover: var(--theme-color-component-4);
       --theme-switch-mixed--background--active: var(--theme-color-component-3);
-      --theme-switch-mixed--background--disabled: var(--theme-color-component-3);
+      --theme-switch-mixed--background--disabled: var(--theme-color-component-2);
       --theme-switch-off--border-color: var(--theme-color-0);
       --theme-switch-off--border-color--hover: var(--theme-color-0);
       --theme-switch-off--border-color--active: var(--theme-color-0);
@@ -557,15 +561,15 @@
       --theme-switch-thumb-off--background: var(--theme-color-1);
       --theme-switch-thumb-off--background--hover: var(--theme-color-1);
       --theme-switch-thumb-off--background--active: var(--theme-color-1);
-      --theme-switch-thumb-off--background--disabled: var(--theme-color-std-bdr);
+      --theme-switch-thumb-off--background--disabled: var(--theme-color-component-3);
       --theme-switch-thumb-on--background: var(--theme-color-1);
       --theme-switch-thumb-on--background--hover: var(--theme-color-1);
       --theme-switch-thumb-on--background--active: var(--theme-color-1);
-      --theme-switch-thumb-on--background--disabled: var(--theme-color-std-bdr);
+      --theme-switch-thumb-on--background--disabled: var(--theme-color-component-3);
       --theme-switch-thumb-mixed--background: var(--theme-color-1);
       --theme-switch-thumb-mixed--background--hover: var(--theme-color-1);
       --theme-switch-thumb-mixed--background--active: var(--theme-color-1);
-      --theme-switch-thumb-mixed--background--disabled: var(--theme-color-std-bdr);
+      --theme-switch-thumb-mixed--background--disabled: var(--theme-color-component-3);
       --theme-switch-thumb-off--border-color: var(--theme-color-0);
       --theme-switch-thumb-off--border-color--hover: var(--theme-color-0);
       --theme-switch-thumb-off--border-color--active: var(--theme-color-0);
