--- a/packages/core/src/components/upload/upload.scss
+++ b/packages/core/src/components/upload/upload.scss
@@ -8,9 +8,11 @@
  */
 
 @import 'common-variables';
+@import 'mixins/shadow-dom/component';
 @import 'mixins/text-truncation';
 
 :host {
+  @include ix-component;
   display: block;
   min-height: 4rem;
   height: 4rem;
@@ -122,4 +124,8 @@
       }
     }
   }
+}
+
+:host(.disabled) {
+  pointer-events: none;
 }
