fix: clickable hover and active

--- a/packages/core/src/components/workflow-step/workflow-step.scss
+++ b/packages/core/src/components/workflow-step/workflow-step.scss
@@ -133,12 +133,14 @@
       }
     }
 
-    &:hover {
-      background-color: var(--theme-workflow-step--background--hover);
-    }
+    &.clickable {
+      &:hover {
+        background-color: var(--theme-workflow-step--background--hover);
+      }
 
-    &:active {
-      background-color: var(--theme-workflow-step--background--active);
+      &:active {
+        background-color: var(--theme-workflow-step--background--active);
+      }
     }
 
     &:focus-visible {
