--- a/packages/core/src/components/pill/pill.scss
+++ b/packages/core/src/components/pill/pill.scss
@@ -6,46 +6,30 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 @import './../chip/chip-mixin';
 @import 'common-variables';
 @import 'mixins/text-truncation';
 
-$border-radius: 100px;
-$chip-height: 1.25rem;
-
 :host {
-  display: inline-flex;
-  width: fit-content;
+  @include ix-component;
+  display: inline-block;
   position: relative;
-  align-items: center;
-  justify-content: center;
-
-  border-radius: $border-radius;
-  padding: 0px 6px;
+  height: 1.25rem;
+  max-height: 1.25rem;
   margin-left: 0.25rem;
-  min-width: $large-space;
-  height: $chip-height;
-  min-height: $chip-height;
-  max-height: $chip-height;
-  cursor: auto;
+}
 
-  .with-icon {
-    margin-right: $tiny-space;
-  }
+@include chip-container(false);
 
-  &.align-left {
+.container {
+  height: 100%;
+  justify-content: center;
+}
+
+:host(.align-left) {
+  .container {
     justify-content: flex-start;
-  }
-
-  @include chip($interaction: false);
-
-  .slot {
-    @include ellipsis;
-  }
-
-  .hidden {
-    width: 0px;
-    margin-right: 0px;
   }
 }
