--- a/packages/core/scss/theme/legacy-classic-dark/_fontSizes.scss
+++ b/packages/core/scss/theme/legacy-classic-dark/_fontSizes.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-light {
+  .theme-legacy-classic-dark {
       --theme-font-size-xs: 0.625rem;
       --theme-font-size-s: 0.75rem;
       --theme-font-size-caption: 0.75rem;
