--- a/packages/core/scss/theme/legacy-classic-dark/_typography.scss
+++ b/packages/core/scss/theme/legacy-classic-dark/_typography.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-dark {
       --theme-text-h2: var(--theme-font-weight-bold) var(--theme-font-size-xl)/var(--theme-line-height-h2) var(--theme-siemens-sans);
       --theme-text-xl: var(--theme-font-weight-normal) var(--theme-font-size-xl)/var(--theme-line-height-xl) var(--theme-siemens-sans);
       --theme-text-l-title: var(--theme-font-weight-bold) var(--theme-font-size-l)/var(--theme-line-height-l) var(--theme-siemens-sans);
