--- a/packages/core/scss/theme/legacy-classic-light/_border.scss
+++ b/packages/core/scss/theme/legacy-classic-light/_border.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-light {
       --theme-primary-bdr-1: 0.0625rem solid var(--theme-color-primary);
       --theme-primary-bdr-2: 0.125rem solid var(--theme-color-primary);
       --theme-dynamic-bdr-1: 0.0625rem solid var(--theme-color-dynamic);
