--- a/packages/core/scss/theme/legacy-classic-light/_spacing.scss
+++ b/packages/core/scss/theme/legacy-classic-light/_spacing.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-light {
       --theme-input-padding-y: 0.5rem;
       --theme-input-padding-x: 0.5rem;
   }
