--- a/packages/core/scss/theme/classic-light/_boxShadow.scss
+++ b/packages/core/scss/theme/classic-light/_boxShadow.scss
@@ -3,17 +3,17 @@
  */
 :root {
   .theme-classic-light {
-      --theme-shadow-1: 0px 2px 2px var(--theme-color-shadow-2), 0px 1px 1px var(--theme-color-shadow-1);
-      --theme-shadow-2: -4px 0px 8px var(--theme-color-shadow-2), 4px 0px 8px var(--theme-color-shadow-2), 0px 0px 16px var(--theme-color-shadow-1);
-      --theme-shadow-3: 0px 2px 6px var(--theme-color-shadow-2), 0px 0px 8px var(--theme-color-shadow-1);
-      --theme-shadow-4: 0px 0px 2px var(--theme-color-shadow-1), 0px 4px 8px var(--theme-color-shadow-1), 0px 12px 18px var(--theme-color-shadow-1);
-      --theme-inset-shadow-1: inset 0px 2px 4px var(--theme-color-shadow-3);
-      --theme-input--box-shadow: none;
+      --theme-shadow-1: 0 1 1 #00000033, 0 2 2 #0000001a;
+      --theme-shadow-2: 0 0 16 #0000001a, 4 0 8 #00000033, -4 0 8 #00000033;
+      --theme-shadow-3: 0 0 8 #00000033, 0 2 6 #00000033;
+      --theme-shadow-4: 0 12 18 #0000001a, 0 4 8 #0000001a, 0 0 2 #0000001a;
+      --theme-inset-shadow-1: inset 0 2 4 #0000001f;
+      --theme-input--box-shadow: var(--theme-inset-shadow-1);
       --theme-menu--box-shadow: var(--theme-shadow-4);
       --theme-navigation--box-shadow: var(--theme-shadow-2);
       --theme-modal--box-shadow: var(--theme-shadow-4);
       --theme-switch-thumb--box-shadow: none;
-      --theme-tile--box-shadow: var(--theme-shadow-3);
+      --theme-tile--box-shadow: none;
       --theme-toast--box-shadow: var(--theme-shadow-4);
   }
 }
