--- a/packages/core/scss/theme/legacy-classic-dark/_lineHeights.scss
+++ b/packages/core/scss/theme/legacy-classic-dark/_lineHeights.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-light {
+  .theme-legacy-classic-dark {
       --theme-line-height-xs: 140%;
       --theme-line-height-s: 150%;
       --theme-line-height-s-single: 150%;
