--- a/packages/core/scss/theme/legacy-classic-light/_borderRadius.scss
+++ b/packages/core/scss/theme/legacy-classic-light/_borderRadius.scss
@@ -2,19 +2,19 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-light {
       --theme-default-border-radius: 0.25rem;
       --theme-small-border-radius: 0.125rem;
       --theme-min-border-radius: 0rem;
-      --theme-btn--border-radius: var(--theme-min-border-radius);
+      --theme-btn--border-radius: var(--theme-default-border-radius);
       --theme-blind--border-radius: var(--theme-default-border-radius);
-      --theme-breadcrumb--border-radius: var(--theme-min-border-radius);
+      --theme-breadcrumb--border-radius: var(--theme-default-border-radius);
       --theme-group--border-radius: var(--theme-default-border-radius);
       --theme-group--border-radius--focus: var(--theme-min-border-radius);
       --theme-kpi--border-radius: var(--theme-default-border-radius);
-      --theme-input--border-radius: var(--theme-small-border-radius);
+      --theme-input--border-radius: var(--theme-default-border-radius);
       --theme-menu--border-radius: var(--theme-default-border-radius);
-      --theme-message-bar--border-radius: var(--theme-min-border-radius);
+      --theme-message-bar--border-radius: var(--theme-default-border-radius);
       --theme-tile--border-radius: var(--theme-default-border-radius);
       --theme-toast--border-radus: var(--theme-default-border-radius);
       --theme-flip-tile--border-radius: var(--theme-default-border-radius);
