--- a/packages/core/scss/theme/legacy-classic-light/_fontFamilies.scss
+++ b/packages/core/scss/theme/legacy-classic-light/_fontFamilies.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-light {
       --theme-siemens-sans: Siemens Sans;
   }
 }
