--- a/packages/core/scss/theme/legacy-classic-light/_fontWeights.scss
+++ b/packages/core/scss/theme/legacy-classic-light/_fontWeights.scss
@@ -2,7 +2,7 @@
  * COPYRIGHT (c) Siemens AG 2018-2023 ALL RIGHTS RESERVED.
  */
 :root {
-  .theme-classic-new-dark {
+  .theme-legacy-classic-light {
       --theme-font-weight-bold: 700;
       --theme-font-weight-normal: 400;
   }
