docs(theme): fix theme switcher

--- a/packages/documentation/src/components/SwitchTheme.module.css
+++ b/packages/documentation/src/components/SwitchTheme.module.css
@@ -63,15 +63,6 @@
   width: 100%;
 }
 
-.Dropdown__Check {
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  position: relative;
-  min-width: 24px;
-  min-height: 24px;
-}
-
 .Dropdown__Item {
   display: flex;
   position: relative;
@@ -105,5 +96,5 @@
   border: var(--theme-soft-bdr-1);
   background-color: #6a7f98;
   border-radius: 40px;
-  margin-left: 2rem;
+  margin-right: 2rem;
 }
