--- a/packages/core/src/components/button/button-mixin.scss
+++ b/packages/core/src/components/button/button-mixin.scss
@@ -40,11 +40,21 @@
       }
 
       &.selected {
-        background-color: var(--theme-btn-#{$name}--background--selected);
+        background-color: var(--theme-color-ghost--selected);
+        color: var(--theme-color-dynamic);
+
+        @include hover {
+          background-color: var(--theme-color-ghost--selected-hover);
+          color: var(--theme-color-dynamic);
+        }
+
+        @include active {
+          background-color: var(--theme-color-ghost--selected-active);
+          color: var(--theme-color-dynamic);
+        }
       }
 
-      &.hover,
-      &:hover {
+      @include hover {
         @if $enable-border {
           border-color: var(--theme-btn-#{$name}--border-color--hover);
         }
@@ -53,8 +63,7 @@
         color: var(--theme-btn-#{$name}--color--hover);
       }
 
-      &:not(:disabled):not(.disabled):active,
-      &:not(:disabled):not(.disabled).active {
+      @include active {
         @if $enable-border {
           border-color: var(--theme-btn-#{$name}--border-color--active);
         }
