--- a/packages/core/src/components/icon-button/icon-button.scss
+++ b/packages/core/src/components/icon-button/icon-button.scss
@@ -7,75 +7,6 @@
  * LICENSE file in the root directory of this source tree.
  */
 
-@import 'common-variables';
-@import '../button/button-mixin.scss';
+@import './icon-button-mixin.scss';
 
-@include btn;
-$button-categories: (primary, secondary);
-@each $category in $button-categories {
-  @include btn-variant($category);
-  @include btn-variant('outline-#{$category}');
-  @include btn-variant('invisible-#{$category}', false);
-}
-
-:host {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-
-  button {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    padding: 0;
-  }
-
-  button.btn-oval {
-    border-radius: 6.25rem;
-  }
-
-  ix-icon {
-    color: var(--ix-icon-button-color);
-    margin: 0;
-  }
-
-  ix-spinner {
-    margin: 0;
-  }
-}
-
-@mixin icon-button-size($sizeName, $size) {
-  :host(.btn-icon-#{$sizeName}) {
-    height: $size;
-    width: $size;
-    min-width: $size;
-    min-height: $size;
-
-    @content;
-  }
-}
-
-@include icon-button-size('12', 1rem);
-@include icon-button-size('16', 1.5rem);
-@include icon-button-size('32', 2rem);
-
-:host(.btn-icon-12) {
-  ix-spinner {
-    height: 12px;
-    width: 12px;
-  }
-}
-
-:host(.btn-icon-16) {
-  ix-spinner {
-    height: 16px;
-    width: 16px;
-  }
-}
-
-:host(.btn-icon-32) {
-  ix-spinner {
-    height: 24px;
-    width: 24px;
-  }
-}
+@include base-icon-button;
