feat(core/select): migrate to shadow dom

--- a/packages/core/src/components/filter-chip/filter-chip.scss
+++ b/packages/core/src/components/filter-chip/filter-chip.scss
@@ -20,7 +20,8 @@
   justify-content: space-between;
   height: $large-space;
   padding-left: $small-space;
-  border: var(--theme-focus--border-thickness) solid var(--theme-chip-primary-outline--border-color);
+  border: var(--theme-focus--border-thickness) solid
+    var(--theme-chip-primary-outline--border-color);
   border-radius: $x-large-space;
   background-color: var(--theme-color-ghost);
   color: var(--theme-chip-primary-outline--color);
@@ -45,19 +46,29 @@
   }
 }
 
+:host(.disabled) {
+  border: var(--theme-focus--border-thickness) solid
+    var(--theme-color-component-4);
+  color: var(--theme-color-weak-text);
+  padding-right: $small-space;
+
+  cursor: default;
+}
+
 @include host-hover {
-    background-color: var(--theme-color-ghost-primary--hover);
-    border-color: var(--theme-chip-primary-outline--border-color--hover);
-    color: var(--theme-chip-primary-outline--color--hover);
-  }
+  background-color: var(--theme-color-ghost-primary--hover);
+  border-color: var(--theme-chip-primary-outline--border-color--hover);
+  color: var(--theme-chip-primary-outline--color--hover);
+}
 
-  @include host-active {
-    background-color: var(--theme-color-ghost-primary--active);
-    border-color: var(--theme-chip-primary-outline--border-color--active);
-    color: var(--theme-chip-primary-outline--color--active);
-  }
+@include host-active {
+  background-color: var(--theme-color-ghost-primary--active);
+  border-color: var(--theme-chip-primary-outline--border-color--active);
+  color: var(--theme-chip-primary-outline--color--active);
+}
 
-  @include host-focus-visible {
-    outline: var(--theme-color-focus-bdr) solid var(--theme-focus--border-thickness);
-    outline-offset: -0.125rem;
-  }
+@include host-focus-visible {
+  outline: var(--theme-color-focus-bdr) solid
+    var(--theme-focus--border-thickness);
+  outline-offset: -0.125rem;
+}
