--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -11,8 +11,11 @@
 @import 'mixins/fonts';
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
+
   display: inline-block;
   position: relative;
   height: auto;
@@ -42,13 +45,38 @@
     &:focus-within {
       background-color: var(--theme-input--background--focus);
       border-color: var(--theme-input--border-color--focus);
-      outline: 1px solid #119fff !important;
+      outline: 1px solid #119fff;
       outline-offset: var(--theme-input--focus--outline-offset);
     }
   }
 
   .select.readonly {
     box-shadow: none !important;
+    border: none;
+    border-radius: 0px;
+    border-bottom: var(--theme-input--border-thickness) solid
+      var(--theme-color-weak-bdr);
+
+    &,
+    &:hover,
+    &:active {
+      background-color: transparent !important;
+    }
+
+    &:focus,
+    &:focus-within,
+    &:focus-visible {
+      outline: none;
+    }
+
+    input {
+      color: var(--theme-color-weak-text);
+    }
+
+    input:focus,
+    input:focus-visible {
+      outline: none;
+    }
   }
 
   .hidden {
