--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -6,8 +6,11 @@
  * This source code is licensed under the MIT license found in the
  * LICENSE file in the root directory of this source tree.
  */
+@import 'mixins/shadow-dom/component';
 
 :host {
+  @include ix-component;
+
   position: relative;
   display: flex;
   flex-wrap: wrap;
@@ -24,11 +27,13 @@
   .group-start {
     left: 0px;
     height: 2rem;
+    margin-left: 0.375rem;
   }
 
   .group-end {
     right: 0px;
     height: 2rem;
+    margin-right: 0.375rem;
   }
 
   ::slotted(*) {
