refactor(core/category-filter): shadow dom wip

--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -159,4 +159,9 @@ input {
   &:disabled {
     color: var(--theme-input--color--disabled);
   }
+
+  &:read-only,
+  &.readonly {
+    cursor: default;
+  }
 }
