feat(core/input): add input styling

--- a/packages/core/scss/ix-core.scss
+++ b/packages/core/scss/ix-core.scss
@@ -21,18 +21,20 @@
 /* Mixins */
 @import './mixins/fonts';
 
+/* Bootstrap Legacy */
+@import './components/bootstrap/forms';
+@import './components/bootstrap/modal';
+
 /* Components */
 @import './components/links';
-@import './components/modal';
 @import './components/buttons';
 @import './components/button-group';
 @import './components/dropdown';
 @import './components/checkboxes';
 @import './components/radiobuttons';
 @import './components/shadows';
-@import './components/forms';
-@import './components/input-group';
 @import './components/table';
+@import './components/form/input';
 
 :root {
   --animate-duration: #{$default-time};
@@ -44,6 +46,7 @@
 body {
   @include text-default();
   background-color: var(--theme-color-1);
+  margin: 0;
 }
 
 body:not(.disable-scrollbar) {
