--- a/packages/core/src/components/pagination/pagination.scss
+++ b/packages/core/src/components/pagination/pagination.scss
@@ -8,7 +8,7 @@
  */
 
 @import 'common-variables';
-@import 'components/forms';
+@import 'components/form/input';
 @import '../icon-button/icon-button';
 @import 'mixins/shadow-dom/component';
 
