feat: add from filed

--- a/packages/core/scss/components/form/_input.scss
+++ b/packages/core/scss/components/form/_input.scss
@@ -15,6 +15,7 @@
     @include text-default;
     height: 2rem;
     min-height: 2rem;
+    width: 100%;
     padding: 0.25rem 0.5rem;
     background-color: var(--theme-input--background);
     color: var(--theme-input--color);
