--- a/packages/core/scss/components/_checkboxes.scss
+++ b/packages/core/scss/components/_checkboxes.scss
@@ -17,6 +17,8 @@
     clip-path: inset(50%);
     height: 1px;
     width: 1px;
+    max-height: 1px;
+    max-width: 1px;
     overflow: hidden;
     position: absolute;
     white-space: nowrap;
@@ -26,9 +28,12 @@
   [type='checkbox']:checked + label {
     position: relative;
     display: inline-flex;
-    align-items: flex-start;
+    align-items: center;
     user-select: none;
     color: var(--theme-checkbox-label--color);
+    height: $size;
+    min-height: $size;
+    max-height: $size;
   }
 
   [type='checkbox']:not(:disabled) + label {
@@ -109,7 +114,8 @@
       border-left: 0.0625rem solid var(--theme-checkbox-checked--color);
       position: absolute;
       margin: 0.31rem 0.42rem 0.1875rem;
-      transform: rotate(-53deg) scale(2) skew(-8deg, -3deg);
+      transform: translate(-1px, -3px) rotate(-53deg) scale(2)
+        skew(-8deg, -3deg);
     }
 
     &:hover + label:before {
@@ -148,7 +154,7 @@
       height: 0.125rem;
       border-bottom: 0.125rem solid var(--theme-checkbox-mixed--color);
       position: absolute;
-      margin: 0.5rem 0 0 0.25rem;
+      margin: 0 0 0 0.25rem;
     }
 
     & + label:before {
