--- a/packages/core/scss/ix.scss
+++ b/packages/core/scss/ix.scss
@@ -8,7 +8,7 @@
  */
 
 /* Include 3rd party libraries */
-
+@import '~bootstrap/scss/bootstrap-grid';
 @import '~animate.css/animate.css';
 
 /* Import global stylings for Web Components */
